gccida/g2/output_constant_def_contents
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3869:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3873:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3877:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_data; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3884:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_data ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3937:31: error: use of undeclared identifier 'machine_mode'
mergeable_constant_section( ( machine_mode)LOBYTE( v4->block.supercontext), v5, 0); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3944:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_const ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3953:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_const; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/varasm.c:3963:52: error: use of undeclared identifier 'a'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&a.dw_attr_val, ( unsigned int)labelno); 
                                                   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_constant_def_contents/src/obj/varasm.o] Error 1
